Fix bad text wrapping in menu items (#273)
* Fix wrapping in menu items

* cleanup prettier error

(cherry picked from commit a4fe8b009a354f6a52109bd63c0314d5b3ecef39)

--- a/resources/variables.less
+++ b/resources/variables.less
@@ -56,6 +56,8 @@
 @opacity-icon: 65%;
 @padding-icon: 0.37142855rem;
 
+@line-height: 1.7;
+
 @keyframes gentle-pulse {
   0% {
     opacity: 0;
